package gymlife.utility;
/** 
 * Position record that model the idea of position in a 2D space.
 * @param  X
 * @param  Y
*/
public record Position(Integer X, Integer Y) {
}
